<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/bc2"
    android:layout_height="match_parent">
  <Space
      android:layout_width="wrap_content"
      android:layout_height="70dp"/>
    <EditText
        android:singleLine="true"
        android:id="@+id/email_mob"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:hint="@string/emailHint"
        android:background="@drawable/corner_shape"
        />
    <EditText
        android:singleLine="true"
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/passwordHint"
        android:background="@drawable/corner_shape"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/loginButton"
        android:background="@drawable/button_curve_shape"
        android:onClick="onLoginClick"
        android:textColor="@android:color/black"
        />
    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/forgotPassword"
        android:textAlignment="center"
        />
    <Space
        android:layout_width="wrap_content"
        android:layout_height="120dp" />

        <!--<Button
        android:id="@+id/facebookloginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="Connect with Facebook"
        android:background="@drawable/button_curve_shape"
        /> -->
  <com.facebook.login.widget.LoginButton
      android:layout_width="match_parent"
      android:layout_height="60dp"
      android:id="@+id/fb_login_but"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:layout_marginBottom="5dp"
      android:layout_marginTop="5dp"
      android:paddingTop="14dp"
      android:paddingBottom="14dp"
      android:textSize="15dp"


      />

   <!-- <Button
        android:id="@+id/googleloginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="Connect with Google"
        android:background="@drawable/button_curve_shape"
        android:textColor="@android:color/black"
        />   -->
          <com.google.android.gms.common.SignInButton
          android:id="@+id/google_sign_in_button"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="16dp"
          android:layout_marginRight="16dp"
          android:layout_marginBottom="5dp"
          android:layout_marginTop="5dp"
          />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't Have an Account ? "/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" Signup"
            android:textStyle="bold"
            android:textSize="25sp"
            android:onClick="signupTextClick"/>
    </LinearLayout>




</LinearLayout>